# vc-dwim

./: .ctags  .gitignore  .hgignore  .hgtags  AUTHORS  ChangeLog  ChangeLog-2011  Coda.pm  Makefile.am  NEWS  ProcessStatus.pm  README  README-devel  README-hacking  README-release  THANKS  TODO  VC.pm  bootstrap  bootstrap.conf  cfg.mk  configure.ac  maint.mk  vc-chlog.in  vc-dwim  vc-dwim.pl
build-aux/: .gitignore
doc/: .gitignore  Makefile.am  vc-dwim.texi
gnulib-local/modules/: extra-lib
man/: Makefile.am
tests/: Makefile.am  add-empty  author  author-bzr  changelog-header-at-end-of-log  check.mk  cl-but-no-diff  cl-other-user  cl-syntax  dirty-workdir  git-log-summary  git-mv  git-worktree  ignore-dirty-submodules  init.cfg  initialize  leading-comment  multiple-chlogs  no-star  no-vc  require-bzr  require-cvs  require-git  require-hg  scalar  subdir  subdir-cvs  subdir-middle  symlinked-changelog  t-vc-chlog  trap-setup  two-line-attr  two-vc
