# Copyright (C) 2006-2009 Free Software Foundation, Inc.
# This file may be modified and/or distributed without restriction.

EXTRA_DIST = $(TESTS) \
  trap-setup

TESTS = \
  git-log-summary \
  author \
  subdir-middle \
  add-empty \
  git-mv \
  two-line-attr \
  cl-other-user \
  no-vc \
  symlinked-changelog \
  scalar \
  two-vc \
  cl-but-no-diff \
  leading-comment \
  no-star \
  subdir \
  subdir-cvs \
  t-vc-chlog \
  multiple-chlogs

include $(srcdir)/check.mk
