# Copyright (C) 2006-2015 Free Software Foundation, Inc.
# This file may be modified and/or distributed without restriction.

EXTRA_DIST = $(TESTS) \
  init.cfg \
  init.sh

TESTS = \
  changelog-header-at-end-of-log \
  git-log-summary \
  author \
  author-bzr \
  subdir-middle \
  add-empty \
  git-mv \
  two-line-attr \
  cl-other-user \
  cl-syntax \
  no-vc \
  symlinked-changelog \
  scalar \
  two-vc \
  cl-but-no-diff \
  leading-comment \
  no-star \
  subdir \
  subdir-cvs \
  t-vc-chlog \
  multiple-chlogs \
  dirty-workdir

include $(srcdir)/check.mk
