# Copyright (C) 2006-2019 Free Software Foundation, Inc.
# This file may be modified and/or distributed without restriction.

EXTRA_DIST = $(TESTS) \
  init.cfg \
  init.sh

TESTS = \
  initialize \
  changelog-header-at-end-of-log \
  git-log-summary \
  author \
  author-bzr \
  subdir-middle \
  add-empty \
  git-mv \
  git-worktree \
  two-line-attr \
  cl-other-user \
  cl-syntax \
  no-vc \
  symlinked-changelog \
  scalar \
  two-vc \
  cl-but-no-diff \
  leading-comment \
  no-star \
  subdir \
  subdir-cvs \
  t-vc-chlog \
  multiple-chlogs \
  dirty-workdir \
  ignore-dirty-submodules

include $(srcdir)/check.mk
